# SysMonitor

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  main.cpp
.github/workflows/: cmake-macos-stable.yml  cmake-multi-main.yml  cmake-multi-platform.yml  cmake-single-platform.yml  cmake-win64-stable.yml
linux/: kernelproxy.cpp  kernelproxy.h  lib.h
macos/: kernelproxy.cpp  kernelproxy.h  lib.h  macmonitor.cpp  macmonitor.h
qt/qml/: HeaderElem.qml  Main.qml  MemView.qml  ProcViewDelegate.qml  ProcViewHighlight.qml  lib.js
shared/: TempLib.h  logger.cpp  logger.h  memprovider.cpp  memprovider.h  procprovider.cpp  procprovider.h  stru.h
winos/: kernelproxy.cpp  kernelproxy.h  lib.h
